repair overflow

--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,8 @@ body{
     font-family: 'Roboto Mono',monospace;
     font-size: 16px;
     background-color: #d7e0e9;
+    overflow-x: hidden;
+
 }
 
 .top {
@@ -161,12 +163,10 @@ body{
 }
 
 
-//About US
+About US
 
 .about_us,.gallery{
     min-height: 100vh;
-}
-.gallery{
 }
 
 .about_us{
@@ -175,20 +175,21 @@ body{
     flex-direction: column;
 
     &__title{
-        width: 100%;
+       
     }
     &__header{
         font-size: 3em;
         align-self: flex-start;
     }
     &__information{
-        width: calc(50% + 20px);
+        width: calc(50%);
         position: relative;
         left: 0;
+        padding: 20px;
         border-right: 5px dotted black;
 
         &:nth-of-type(2n){
-            left:calc(50% - 20px);
+            left:calc(50% - 5px);
             border-right: none;
             border-left: 5px dotted black;
         }
